# dfx_react_template

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json  update_project_name.sh  webpack.config.js
src/dfx_react_template_backend/: main.mo
src/dfx_react_template_frontend/src/: App.tsx  Greet.tsx  Vote.tsx  index.html  index.js  index.tsx  tsconfig.json
src/dfx_react_template_rust_backend/: Cargo.toml  dfx_react_template_rust_backend.did
src/dfx_react_template_rust_backend/src/: lib.rs
